--- a/app/styles/_sections.scss
+++ b/app/styles/_sections.scss
@@ -344,6 +344,11 @@ $background-image: '../images/background.png';
   }
 
   .form-container {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     align-self: center;
     margin: auto;
   }
